# turbine_opt_adapt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
experiments/box_2turbine_1param/: explore.py  fixed_mesh.py  goal_oriented.py  plot_meshes.py  plot_parameter_spaces.py  plot_progress.py  plot_progress_parameter_space.py  setup.py  utils.py
experiments/box_4turbine_1param/: explore.py  fixed_mesh.py  goal_oriented.py  plot_meshes.py  plot_parameter_spaces.py  plot_progress.py  plot_progress_parameter_space.py  setup.py
experiments/box_4turbine_2param/: explore.py  fixed_mesh.py  goal_oriented.py  plot_progress.py  plot_progress_parameter_space.py  setup.py
turbine_opt_adapt/: __init__.py  experiment.py  plotting.py  qoi.py  solver.py  test_case_setup.py
