[build-system]
requires = ["setuptools"]

[project]
name = "turbine_opt_adapt"
version = "0.1"
authors = [{name = "Joseph G. Wallwork", email = "joe.wallwork@outlook.com"}]
maintainers = [{name = "Joseph G. Wallwork", email = "joe.wallwork@outlook.com"}]
description = "Tidal energy experiments using combined PDE-constrained optimisation and goal-oriented mesh adaptation"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python"]
dependencies = ["matplotlib", "numpy"]

[project.urls]
Repository = "https://github.com/mesh-adaptation/turbine_opt_adapt"

[tool.setuptools]
packages = ["turbine_opt_adapt"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "C",  # mccabe complexity
  "D",  # documentation
  "E", "W",  # Pycodestyle
  "F",  # Pyflakes
  "I",  # isort
]
ignore = [
  "D211",  # Incompatible with D203
  "D213",  # Incompatible with D212
]
